fix scrollbar styling

--- a/src/app/note-form/note-form.component.scss
+++ b/src/app/note-form/note-form.component.scss
@@ -7,7 +7,7 @@
     font-weight: 600;
     padding: .5rem 1rem .5rem 1rem;
     border-radius: 4px;
-    border: var(--clr-text) 2px solid;
+    border: var(--clr-primary) 2px solid;
     background: transparent;
     resize: none;
     outline: none;
