--- a/src/app/note-section/note-section.component.scss
+++ b/src/app/note-section/note-section.component.scss
@@ -21,13 +21,16 @@ header {
     background-color: var(--clr-secondary);
 
     & .search-bar {
-        width: 30%;
+        width: 50%;
         min-height: 2rem;
         border-radius: 5px;
         color: var(--clr-primary);
         background: var(--background);
         padding: 0.5rem 1rem;
         border: 0;
+        @include mq(60em) {
+            width: 30%;
+        }
     }
     & button {
         font-size: 1rem;
@@ -81,16 +84,16 @@ h1 {
     gap: 1rem;
     padding: 1em;
     scrollbar-color: var(--clr-primary) var(--background);
+    scrollbar-width: thin;
+    &::placeholder {
+        color: var(--clr-primary);
+        opacity: 1; // Firefox
+    }
+    &::-ms-input-placeholder { /* Microsoft Edge */
+        color: var(--clr-primary);
+    }
     &::-webkit-scrollbar {
         width: 0.5rem;
-    }
-    &::-webkit-scrollbar-track {
-      background-color: var(--background);
-      border-radius: 100vw;
-    }
-    &::-webkit-scrollbar-thumb {
-      background-color: var(--clr-primary);
-      border-radius: 100vw;
     }
     @include mq(84em) {
         max-width: 70%;
